# claudeAPILayer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: __init__.py  server.py
api/middleware/: __init__.py  auth.py  logging.py
api/models/: __init__.py  requests.py  responses.py
api/routes/: __init__.py  chat.py  evolve.py  sessions.py
config/: __init__.py  logging.py  settings.py
core/: __init__.py  claude_client.py  session_manager.py
docker/: Dockerfile  docker-compose.yml
evolve/: __init__.py
examples/: basic_usage.py
templates/: base.html  dashboard.html  session_detail.html
